apps/healthview-surgicsense/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthview-surgicsense-backend
  namespace: healthview-surgicsense
  labels:
    app.kubernetes.io/name: healthview-surgicsense-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: healthview-surgicsense
spec:
  revisionHistoryLimit: 2
  
  selector:
    matchLabels:
      app.kubernetes.io/name: healthview-surgicsense-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthview-surgicsense-backend
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: healthview-surgicsense
    spec:
      
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/curatimexai/segmentation-backend:a15ae2021316ec7591f1da71790f3a2ca843b875
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: api
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /docs
              port: api
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 4Gi
