apps/healthview-surgicsense/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthview-surgicsense-frontend
  namespace: healthview-surgicsense
  labels:
    app.kubernetes.io/name: healthview-surgicsense-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: healthview-surgicsense
    
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: healthview-surgicsense-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthview-surgicsense-frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: healthview-surgicsense
    spec:
    
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/curatimexai/surgicsense-frontend:9a363cad7d002b79efce3936d1a86ac978a3bce6
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
