apps/healthview-surgicsense/networkpolicies-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: networkpolicy-frontend-surgisense
 namespace: healthview-surgicsense
spec:
  podSelector:
    matchLabels:
       app.kubernetes.io/component: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
         kubernetes.io/metadata.name: ingress-nginx
    ports:
      - protocol: TCP
        port: 8080
